--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
-
+@font-face{
+  font-family: Oneday;
+  src: url("./fonts/onedayttf");
+}
 body{
-  text-align: center;
-  align-items: center;
+  background-color: #008080;
+}
+.main{
+  background-color: #004d4d;
+  padding: 4%;
+}
+.main button{
+  margin-top: 2%;
+  width: 100%;
+  font-family: Oneday;
+  font-size: 2rem;
+  border-radius: 10px;
+  border-style: none;
+  color: #333333;
+  background-color: #4dffa6;
+  outline: 0;
+  word-wrap: none;
 }
