--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body{
   background-color: #008080;
 }
-.main{
+body div{
   background-color: #004d4d;
   padding: 4%;
 }
@@ -22,10 +22,4 @@ body{
   display: none;
   display: flex;
   flex-direction: column;
-}
-#link{
-  text-decoration: none;
-  font-family: Oneday;
-  font-size: 1rem;
-  color: black;
 }
